[gd_scene load_steps=30 format=2]

[ext_resource path="res://other/king_pig_animations.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scripts/level_objects/Pig.gd" type="Script" id=2]
[ext_resource path="res://assets/Minifantasy_Dungeon_SFX/21_orc_damage_1.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/level_objects/Round 3/DiamondToEndScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Minifantasy_Dungeon_SFX/24_orc_death_spin.wav" type="AudioStream" id=5]
[ext_resource path="res://scripts/state_machine/ChargeState.gd" type="Script" id=6]
[ext_resource path="res://scripts/state_machine/StateMachine.gd" type="Script" id=7]
[ext_resource path="res://scripts/state_machine/AnimatedState.gd" type="Script" id=8]
[ext_resource path="res://assets/Minifantasy_Dungeon_SFX/26_sword_hit_1.wav" type="AudioStream" id=9]
[ext_resource path="res://scripts/state_machine/AttackState.gd" type="Script" id=10]
[ext_resource path="res://scripts/character_bits/Hitbox.gd" type="Script" id=11]
[ext_resource path="res://scenes/character_bits/SpeechBubble.tscn" type="PackedScene" id=13]
[ext_resource path="res://scripts/state_machine/RunState.gd" type="Script" id=19]
[ext_resource path="res://scripts/state_machine/LandState.gd" type="Script" id=20]
[ext_resource path="res://assets/Minifantasy_Dungeon_SFX/21_orc_damage_2.wav" type="AudioStream" id=21]
[ext_resource path="res://assets/Minifantasy_Dungeon_SFX/16_human_walk_stone_2.wav" type="AudioStream" id=22]
[ext_resource path="res://assets/Minifantasy_Dungeon_SFX/17_orc_atk_sword_2.wav" type="AudioStream" id=23]
[ext_resource path="res://assets/Minifantasy_Dungeon_SFX/17_orc_atk_sword_3.wav" type="AudioStream" id=24]
[ext_resource path="res://assets/Minifantasy_Dungeon_SFX/16_human_walk_stone_3.wav" type="AudioStream" id=25]
[ext_resource path="res://assets/Minifantasy_Dungeon_SFX/17_orc_atk_sword_1.wav" type="AudioStream" id=26]
[ext_resource path="res://assets/Minifantasy_Dungeon_SFX/16_human_walk_stone_1.wav" type="AudioStream" id=27]
[ext_resource path="res://assets/Minifantasy_Dungeon_SFX/21_orc_damage_3.wav" type="AudioStream" id=28]
[ext_resource path="res://scenes/character_bits/CharacterAudio.tscn" type="PackedScene" id=29]
[ext_resource path="res://scenes/character_bits/CharacterParticles.tscn" type="PackedScene" id=30]

[sub_resource type="CapsuleShape2D" id=13]
radius = 26.0
height = 26.0

[sub_resource type="CapsuleShape2D" id=25]
radius = 37.2746
height = 54.2264

[sub_resource type="Curve" id=28]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=27]
curve = SubResource( 28 )

[sub_resource type="ParticlesMaterial" id=29]
flag_disable_z = true
spread = 152.69
gravity = Vector3( 0, 98, 0 )
initial_velocity = 446.28
initial_velocity_random = 0.61
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 0.5
scale_curve = SubResource( 27 )

[node name="KingPig" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )
drop = ExtResource( 4 )
king_level = 3
health = 5
speed = 120
attack_range = 80
knockback_multiplier = 0.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
animation = "idle"

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
animation = "die"

[node name="Hit" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
animation = "hit"

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
animation = "attack"
first_active_frame = 2
last_active_frame = 3

[node name="ChargeAttack" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
animation = "charge_attack"
first_active_frame = 1
last_active_frame = 3

[node name="Charge" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
animation = "charge"

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 19 )
animation = "run"

[node name="Resurrect" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
animation = "resurrect"

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
animation = "jump"

[node name="Land" type="Node" parent="StateMachine"]
script = ExtResource( 20 )
animation = "land"

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
animation = "fall"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = ExtResource( 1 )
animation = "charge_attack"
frame = 4
playing = true
offset = Vector2( -3, -6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7, -9 )
shape = SubResource( 13 )

[node name="CharacterAudio" parent="." instance=ExtResource( 29 )]
footsteps = [ ExtResource( 27 ), ExtResource( 22 ), ExtResource( 25 ) ]
on_attack = [ ExtResource( 26 ), ExtResource( 23 ), ExtResource( 24 ) ]
on_hit = [ ExtResource( 3 ), ExtResource( 21 ), ExtResource( 28 ) ]
on_death = [ ExtResource( 5 ) ]

[node name="CharacterParticles" parent="." instance=ExtResource( 30 )]
position = Vector2( 0, 25 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 11 )
knockback = Vector2( 0, -500 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -33, -16 )
rotation = -0.506145
shape = SubResource( 25 )

[node name="SpeechBubble" parent="." instance=ExtResource( 13 )]
visible = false

[node name="ParrySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="ParryParticle" type="Particles2D" parent="."]
position = Vector2( -62, -37 )
emitting = false
amount = 28
one_shot = true
explosiveness = 1.0
process_material = SubResource( 29 )

[connection signal="attack_landed" from="Hitbox" to="StateMachine/Attack" method="_on_Hitbox_attack_landed"]
[connection signal="body_entered" from="Hitbox" to="Hitbox" method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="Hitbox" method="_on_Hitbox_body_exited"]
